@@ -1,4 +1,15 @@
-2005-08-18  John McCutchan,,,  <set EMAIL_ADDRESS environment variable>
+2005-08-19  John McCutchan  <ttb@tentacle.dhs.org>
+
+	Patch from TomPh <tpgww@onepost.net>
+
+	* configure.in: Properly define HAVE_LINUX when configured with
+	--disable-kernel. Clear up build options. debug & debug-api disabled by
+	default unless CVS directory exists. Use -Ox optimization only when -g is not
+	used.
+	* server/Makefile.am: make some _SOURCES conditional on ENABLE_INOTIFY &
+	ENABLE_DNOTIFY.
+
+2005-08-18  John McCutchan <ttb@tentacle.dhs.org>
 
 	* python/tests/basic4.py: show callback debug
 	* server/gam_inotify.c: (gam_inotify_init): Enable the basic poll
